Fixed things, that messed with text and button alignments

--- a/frontend/src/Styles/About.css
+++ b/frontend/src/Styles/About.css
@@ -33,6 +33,6 @@ div.DraftEditor-root {
 }
 
 .div-flex {
-    display: flex;
+    display: flex-end;
     justify-content: space-between;
 }
